--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <div class="col-md-4">
             <div class="section">
               <h1>MUHAMMAD LUTHFI RAHMAN</h1>
-              <p>Definitely a Professional ProGrammar</p>
+              <p>Definitely a Junior Programmer</p>
               <p>
-                Currently studying in the Informatics department at
+                College graduates in the Informatics department at
                 <a href="https://polnes.ac.id/" target="_blank"
                   >Politeknik University</a
                 >
