--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
               <i>*flush</i> or whatever as long as you happy, <i>i guess-</i>
               <br />
               <br />
-              Currently studying in the Informatics department at
+              College graduates in the Informatics department at
               <a href="https://polnes.ac.id/" target="_blank"
                 >Politeknik University</a
               >
@@ -51,6 +51,9 @@
               <span class="header"><br />Experience</span>
               <br />
               -
+              <a href="https://food-catering.store/" target="_blank"
+                >Catering Rosyanti</a
+              >
               <br />
               <br />
               Within those 7 years, I have:
